--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap'); 
 
+@keyframes gradient {
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -8,14 +20,13 @@ body {
   font-family: 'Muli', sans-serif;
   overflow: hidden;
   margin: 0;
-  background-image: url('https://images.unsplash.com/photo-1614854262318-831574f15f1f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background-image: linear-gradient(45deg, #eea2a2, #bbc1bf, #57c6e1, #b49fda, #7ac5d8);
+  background-size: 150% 150%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: gradient 5s ease infinite;
 }
 
 .container {
